--- a/src/assets/scss/_override-variables.scss
+++ b/src/assets/scss/_override-variables.scss
@@ -1,5 +1,8 @@
 $font-family-sans-serif:      "Noto Serif TC", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
+$font-weight-medium: 500;
+$font-weight-base: $font-weight-medium;
+
 $font-size-base: 1rem;
 
 $h1-font-size: $font-size-base * 3;
