--- a/src/assets/scss/_override-variables.scss
+++ b/src/assets/scss/_override-variables.scss
@@ -53,6 +53,9 @@ $spacers: (
   4: $spacer * 1.25,
   5: $spacer * 1.5,
   6: $spacer * 2,
+  7: $spacer * 2.5,
+  8: $spacer * 5,
+  9: $spacer * 7.5
 ) !default;
 
 $container-max-widths: (
