feat: 註冊 Step-2 UI

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -11,6 +11,7 @@
 @import "bootstrap/scss/bootstrap";
 
 @import "cus-reboot";
+@import "cus-utilities";
 
 @import "components/navbar";
 @import "components/buttons";
